--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,7 +1,9 @@
 <h1>Help</h1>
 <p>
-  Get help on the Ruby on Rails Tutorial at the
-  <a href="http://railstutorial.org/help">Rails Tutorial help page</a>.
-  To get help on this sample app, see the
-  <a href="http://railstutorial.org/book">Rails Tutorial book</a>.
+  Obtenga ayuda en el Tutorial de Ruby on Rails en la
+  <a href="http://railstutorial.org/help">TUTORIAL RUBY ON RAILS AYUDA</a>.
+</p>
+<p>
+Obtenga ayuda del
+  <a href="http://railstutorial.org/book">LIBRO DE TUTORIAL RUBY ON RAILS</a>.
 </p>
