--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,9 @@
 <h1>Sample App</h1>
 <p>
-  This is the home page for the
-  <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
-  sample application.
+  ESTE ES LA PAGINA PRINCIPAL DE 
+  <a href="http://railstutorial.org/">TUTORIAL RUBY ON RAILS</a>
+ </p>
+ 
+<p>  
+  SIMPLE APLICACION (LCML).
 </p>
