Finish static pages

--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,4 +1,10 @@
-<h1>Help</h1>
+<% provide(:title, 'Help') %>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Ruby on Rails Tutorial Sample App | <%= yield(:title) %></title>
+  </head>
+  <body><h1>Help</h1>
 <p>
   Obtenga ayuda en el Tutorial de Ruby on Rails en la
   <a href="http://railstutorial.org/help">TUTORIAL RUBY ON RAILS AYUDA</a>.
@@ -7,3 +13,9 @@
 Obtenga ayuda del
   <a href="http://railstutorial.org/book">LIBRO DE TUTORIAL RUBY ON RAILS</a>.
 </p>
+<p>
+  <a href="http://localhost:3000/static_pages/home">REGRESAR</a>.
+</p>
+
+</body>
+</html>
