--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -5,7 +5,7 @@
     <title>Ruby on Rails Tutorial Sample App | <%= yield(:title) %></title>
   </head>
   <body>
-    <h1>About Us</h1>
+    <h1>Acerca de Nosotros</h1>
 
 <p>
   The <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
