--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,32 +2,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Home | <%= yield(:title) %>/title>
+    <title>Ruby on Rails Tutorial Sample App | <%= yield(:title) %></title>
   </head>
-  <body>
-    <h1>Sample App</h1>
-<p>
-  ESTE ES LA PAGINA PRINCIPAL DE 
-  <a href="http://railstutorial.org/">TUTORIAL RUBY ON RAILS</a>
- </p>
- 
-<p>  
-  SIMPLE APLICACION (LCML).
-</p>
-
-<p>  
- <a href="http://localhost:3000/static_pages/help">help</a>
-</p>
-
-<p>  
-  <a href="http://localhost:3000/static_pages/about">about</a>
-</p>
-
-<p>  
-  <a href="http://facebook.com">FACEBOOK</a> </p>
-<p>  
-  <a href="https://twitter.com/">TWITTER</a>
-</p>
-
-  </body>
 </html>
+<div class="center hero-unit">
+  <h1>BIENVENIDOS A MI APP LCML</h1>
+
+  <h2>
+    This is the home page for the
+    <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
+    sample application.
+  </h2>
+
+  <%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
+</div>
+
+<img alt="Rails" src="http://www.mixmarket.org/sites/default/files/imagecache/logo_175/botondacompsc.jpg" />
