--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,10 +1,10 @@
-<% provide(:title, 'Help') %>
-<!DOCTYPE html>
+<% provide(:title, 'Singup') %>
 <html>
   <head>
     <title>Ruby on Rails Tutorial Sample App | <%= yield(:title) %></title>
   </head>
-  <body><h1>Ayuda</h1>
+</html>
+  <body><h1>Sign</h1>
 <p>
   Obtenga ayuda en el Tutorial de Ruby on Rails en la
   <a href="http://railstutorial.org/help">TUTORIAL RUBY ON RAILS AYUDA</a>.
