MAKE A BASIC USER MODEL (INCLUDING SECURE PASSWORDS)

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,21 +1,9 @@
-<% provide(:title, 'Singup') %>
+<% provide(:title, 'Sign up') %>
+<!DOCTYPE html>
 <html>
   <head>
     <title>Ruby on Rails Tutorial Sample App | <%= yield(:title) %></title>
   </head>
-</html>
-  <body><h1>Sign</h1>
-<p>
-  Obtenga ayuda en el Tutorial de Ruby on Rails en la
-  <a href="http://railstutorial.org/help">TUTORIAL RUBY ON RAILS AYUDA</a>.
-</p>
-<p>
-Obtenga ayuda del
-  <a href="http://railstutorial.org/book">LIBRO DE TUTORIAL RUBY ON RAILS</a>.
-</p>
-<p>
-  <a href="http://localhost:3000/static_pages/home">REGRESAR</a>.
-</p>
-
-</body>
+<h1>Sign up</h1>
+<p>Find me in app/views/users/new.html.erb</p>
 </html>
