finalizo el registro de usuario

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,9 +8,9 @@
       <nav>
         <ul class="nav pull-right">
         <!-- esto debe ir igual a los spec - request -->
-          <li><%= link_to "Home",    root_path %>  </li>
-          <li><%= link_to "Help",    help_path %>  </li>
-          <li><%= link_to "Sign up", signup_path %></li>
+          <li><%= link_to "Inicio",    root_path %>  </li>
+          <li><%= link_to "Ayuda",    help_path %>  </li>
+          <li><%= link_to "Registro", signup_path %></li>
         </ul>
       </nav>
     </div>
