--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -9,12 +9,12 @@
   <h1>BIENVENIDOS A MI APP LCML</h1>
 
   <h2>
-    This is the home page for the
-    <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
-    sample application.
+    Esta es la pagina para hacer el 
+    <a href="http://railstutorial.org/">Tutorial Ruby on Rails</a>
+    mi aplicacion.
   </h2>
 
-  <%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
+  <%= link_to "Registrate ahora!", signup_path, class: "btn btn-large btn-primary" %>
 </div>
 
 <img alt="Rails" src="http://www.mixmarket.org/sites/default/files/imagecache/logo_175/botondacompsc.jpg" />
