--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,9 +1,24 @@
 <% provide(:title, 'Sign up') %>
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Ruby on Rails Tutorial Sample App | <%= yield(:title) %></title>
-  </head>
-<h1>Sign up</h1>
-<p>Find me in app/views/users/new.html.erb</p>
-</html>
+<h1>Registro de Usuarios</h1>
+
+<div class="row">
+  <div class="span6 offset3">
+    <%= form_for(@user) do |f| %>
+          <%= render 'shared/error_messages' %>
+
+      <%= f.label :name, "Nombre" %>
+      <%= f.text_field :name %>
+
+      <%= f.label :email %>
+      <%= f.text_field :email %>
+
+      <%= f.label :password, "Contraseña" %>
+      <%= f.password_field :password %>
+
+      <%= f.label :password_confirmation, "Confirmacion de contraseña" %>
+      <%= f.password_field :password_confirmation %>
+
+      <%= f.submit "Create my account", class: "btn btn-large btn-primary" %>
+    <% end %>
+  </div>
+</div>
